[#DCM-399] Gaining performance by using Integer.valueOf(int value) instead of new Integer(int value) in SimpleDicomElement.getInt(int tag)